# swarm-resume-refiner

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  packages.txt  pyproject.toml  requirements.txt  start.sh  streamlit_app.py
knowledge/: jd_data_scientist.txt  job_description.txt  resume_best_practices.txt
media/: architecture
output/: final_report.md  job_analysis.json  optimized_resume.md  resume_optimization.json  verified_resume.md
resume_refiner_crew/src/resume_refiner_crew/: crew.py  main.py
src/resume_refiner_crew/: constants.py  crew.py  main.py  models.py  streamlit_runner.py  utils.py  validation.py
src/resume_refiner_crew/config/: agents.yaml  tasks.yaml
src/resume_refiner_crew/tools/: custom_tool.py  latex_generator.py  pdf_generator.py  word_counter_tool.py
templates/: harvard_resume.tex  harvard_resume_pandoc.tex  reference-resume.docx
tests/fixtures/knowledge/: job_description.txt
tests/fixtures/output/: CV_Mongi_Marco_Computer_Vision_Engineer.docx  CV_Mongi_Marco_Computer_Vision_Engineer.tex  CV_Mongi_Marco_Computer_Vision_Engineer_-_Cosmetic_Grading.docx  CV_Mongi_Marco_Computer_Vision_Engineer_-_Cosmetic_Grading.tex  CV_Mongi_Marco_Computer_Vision_Engineer_CosmeticDefect_Grading.tex  final_report.md  job_analysis.json  optimized_resume.md  parsed_resume.md  resume_optimization.json  structured_resume.json  verified_resume.md
