[project]
name = "resume_refiner_crew"
version = "0.1.0"
description = "resume-refiner-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.1.0",
    "pypandoc>=1.13",
    "qdrant-client>=1.15.1",
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
resume_refiner_crew = "resume_refiner_crew.main:run"
run_crew = "resume_refiner_crew.main:run"
train = "resume_refiner_crew.main:train"
replay = "resume_refiner_crew.main:replay"
test = "resume_refiner_crew.main:test"
run_with_trigger = "resume_refiner_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
